# ppde

./: .gitignore  README.md  pyproject.toml
examples/: EXAMPLES.md
ppde/: __init__.py  __main__.py  cli.py  context.py  data_structures.py  explanation.py  frequency.py  git_history.py  orchestrator.py  warnings.py
ppde/detectors/: __init__.py  error.py  external.py  mutation.py  utils.py
ppde/evaluation/: __init__.py
tests/: test_cli.py  test_context.py  test_detectors.py  test_explanation.py  test_frequency.py  test_git_history.py  test_orchestrator.py  test_warnings.py
